# idika

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5w7nhyvrgsa81h0kyifmbl6j97hvlzh5-source  743pd2cfry70v1abpzbw5zsvjx7niq31-source  ais7gaplvmkr52nb0279s7gd3lg7c5hl-source  kkibwjcbmp66aamims23pyy2ng39prws-source
.github/workflows/: CI.yml
examples/: cuid2.py  snowflake.py
src/: lib.rs  main.rs
