[package]
name = "idika"
version = "0.2.0"
edition = "2021"
authors = [
  "jackkweyunga <jackkweyunga@gmail.com>",
]

[lib]
name = "idika"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "idika"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.21.2", features = ["abi3-py37"] }
cuid2 = "0.1.2"
sonyflake = "0.2.0"
rayon = "1.8"

