[package]
name = "idika"
version = "0.3.1"
edition = "2021"
authors = [
  "jackkweyunga <jackkweyunga@gmail.com>",
]

[lib]
name = "idika"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["abi3-py37", "extension-module"] }
cuid2 = "0.1.2"
rayon = "1.8"
cargo-coverage = "0.1.1"

